updated the project card apparence

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="dark-theme-background">
+  <body class="dark-theme-background" style="overflow-y: auto;">
     <app-root class="centered"></app-root>
   </body>
 </html>
