--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="./assets/styles/style.css" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="./assets/images/logo.png"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway:200,100,400"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <meta charset="utf-8" />
-    <title>Personal Webpage</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body class="dark-theme-background">
-    <app-root class="centered"></app-root>
-  </body>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="./assets/styles/style.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/images/logo.png" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8" />
+  <title>Personal Webpage</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
+
+<body class="dark-theme-background"> 
+  <!-- <div class="ui sixteen column doubling stackable grid container" style="overflow-y: auto;max-height: 200px;"> -->
+    <app-root class="centered" style="min-width: 100%; min-height: 100%;height: 100%;max-height: 100%;" ></app-root>
+  <!-- </div> -->
+</body>
+
 </html>
