--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!--  <script-->
-  <!--    async-->
-  <!--    src="https://www.googletagmanager.com/gtag/js?id=UA-170853340-1"-->
-  <!--  ></script>-->
-  <!--  <script>-->
-  <!--    window.dataLayer = window.dataLayer || [];-->
-  <!--    function gtag() {-->
-  <!--      dataLayer.push(arguments);-->
-  <!--    }-->
-  <!--    gtag("js", new Date());-->
+<!--   Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-170853340-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  <!--    gtag("config", "UA-170853340-1");-->
-  <!--  </script>-->
+      gtag("config", "UA-170853340-1");
+    </script>
   <link rel="stylesheet" type="text/css" href="./assets/styles/style.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/logo.png"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
