--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <!--   Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-170853340-1"
+      src="https://www.googletagmanager.com/gtag/js?id=G-PL4CQGKQ62"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -14,7 +14,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-170853340-1");
+      gtag("config", "G-PL4CQGKQ62");
     </script>
   <link rel="stylesheet" type="text/css" href="./assets/styles/style.css"/>
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/logo.png"/>
